fix(canary-web-components): updated loading state styling
Updated loading state styling so it appears above data table when data is present and loading is set
to true

--- a/packages/canary-web-components/src/components/ic-data-table/ic-data-table.css
+++ b/packages/canary-web-components/src/components/ic-data-table/ic-data-table.css
@@ -14,6 +14,11 @@
   height: calc(100% - var(--ic-space-xxxs));
 }
 
+ic-loading-indicator {
+  position: sticky;
+  top: 20px;
+}
+
 .table-row-container {
   position: relative;
   height: 100%;
